commit nauki tabel

--- a/list.html
+++ b/list.html
@@ -32,10 +32,10 @@
     <ul>
         <li>GMC</li>
         <li>Dodge</li>
-        <ol>
-            <li>Viper</li>
-            <li>cos</li>
-        </ol>
+            <ol>
+                <li>Viper asdasdasdad</li>
+                <li>cos</li>
+            </ol>
         <li>Ponitic</li>
     </ul>
 
